@@ -21,6 +21,7 @@ parameters:
 - fixed typo: heuristics/completesol/maxunkownrate has changed to heuristics/completesol/maxunknownrate
 - new parameters: beforepresol, maxlpiter, and maxcontvars in heur_completesol.c
 - new parameter: lp/refactorinterval to change the refactorization interval of the LP solver
+- new value 3 for parameter "lp/solutionpolishing" to enable LP polishing only during probing and diving mode
 
 interface:
 - new interface methods to create and use bandit algorithms implemented as SCIP core plugins --
